--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "author": "Rudy",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.4",
     "nodemon": "^2.0.19"
   }
 }
