--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "tesseract.js": "^2.1.5"
   }
 }
