--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "dom-parser": "^0.1.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.4.4",
     "nodemon": "^2.0.19",
+    "path": "^0.12.7",
     "tesseract.js": "^2.1.5"
   }
 }
